Bug: misaligned nav element

--- a/css/globals/templates/nav.less
+++ b/css/globals/templates/nav.less
@@ -1,7 +1,7 @@
 .site-nav {
   .position(relative, 1em, auto, auto, .25em, 3em, 3em);
-  //background: green;
   display: block;
+  padding: 8px;
   text-align: center;
   z-index: 20;
   > img {
